<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="474dp"
        android:layout_height="330dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208"
        app:srcCompat="@drawable/header"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/LaundryLab"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.191" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/ijo1"
        android:fontFamily="@font/montserrat_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/Register"
        android:textSize="16sp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.735"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextKonfirmPassword"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:backgroundTint="#0DFFFFFF"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/KonfrimPassword"
        android:includeFontPadding="true"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:textColor="#661A535C"
        android:textColorHint="#00838F"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.658"
        android:importantForAutofill="no"
        tools:ignore="RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:backgroundTint="#0DFFFFFF"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/KataSandi"
        android:includeFontPadding="true"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:textColor="#661A535C"
        android:textColorHint="#00838F"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.596"
        android:autofillHints=""
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:foregroundTint="#972828"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:textColor="#661A535C"
        android:textColorHint="#00838F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535"
        android:importantForAutofill="no"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextTextName"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:foregroundTint="#972828"
        android:hint="@string/Nama"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:textColor="#661A535C"
        android:textColorHint="#00838F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473"
        android:autofillHints=""
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/Register"
        android:textAlignment="center"
        android:textColor="@color/ijo1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419" />

    <ImageView
        android:id="@+id/imageViewFB"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_facebook"
        tools:layout_editor_absoluteY="684dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/TODO" />

    <ImageView
        android:id="@+id/imageViewGoogle"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_google"
        tools:layout_editor_absoluteY="674dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/sudahakun"
        android:textColor="@color/ijo1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.87" />

    <TextView
        android:id="@+id/buttonRegisterLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/Masuk"
        android:textColor="@color/ijo1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>